--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,11 @@
+svg {
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    stroke-width: 0;
+    stroke: red;
+    fill: red;
+  }
 
 body{
     
@@ -195,10 +203,27 @@ header .container{
 }
 .head-nav__li{
     margin-right: 40px;
+    position: relative;
+}
+.head-nav__li::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    background: #404BBF;
+    bottom: -1px;
+    left: 0;
+    display: none;
+    transition-property:all .4s;
+}
+.head-nav__li.active::after{
+    display: block;
 }
 .head-nav__li:last-child{
     margin-right: 0;
-    }
+}
+
 .head-nav__link{
     font-family: 'Roboto', sans-serif;
 font-size: 16px;
@@ -210,6 +235,7 @@ transition: all .4s;
 color: #2e2f42;
 padding: 24px 0;
 display: inline-block;
+transition-property:all .4s;
 }
 
 .head-nav__link:hover,
@@ -237,6 +263,7 @@ letter-spacing: 0.32px;
 transition: all .4s;
 color: #434455;
 display: inline-block;
+transition-property:all .4s;
 }
 .head-info__link:hover,
 .head-info__link:focus {
@@ -244,8 +271,23 @@ display: inline-block;
 }
 
 .advertisement{
-    background-color: #2e2f42;
     padding: 188px 0;
+    background-image: url(../images/herobg.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    position: relative;
+}
+.advertisement:after{
+    content: '';
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.7);
+    z-index: 0;
 }
 .advertisement__title{
     color: #fff;
@@ -257,6 +299,8 @@ display: inline-block;
     margin-bottom: 48px;
     text-align: center;
     max-width: 496px;
+    z-index: 1;
+    position: relative;
 }
 .advertisement__btn{
     height: 56px;
@@ -271,10 +315,14 @@ display: inline-block;
     letter-spacing: 0.64px;
     transition: all .4s;
     border-radius: 4px;
+    z-index: 1;
+    position: relative;
+    transition-property:all .4s;
 }
 .advertisement__btn:hover,
 .advertisement__btn:focus{
  background-color: #404BBF;
+ box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 .methody{
     
@@ -288,6 +336,9 @@ margin-right: 24px;
 }
 .methody__block:last-child{
     margin-right: 0;
+}
+.methody__icon-cover svg{
+ fill: red;
 }
 .methody__title{
 font-family: 'Roboto', sans-serif;
@@ -321,6 +372,11 @@ color: #2e2f42;
     margin-right: 24px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px; 
+    /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);     */
+    transition: all .4s;
+}
+.team__block:hover{
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 .team__block:last-child{
     margin-right: 0;
@@ -352,6 +408,10 @@ text-align: center;
 width: calc((100% - 48px) / 3);
 border: 1px solid #E7E9FC;
 background-color:  #FFF;
+transition:all .4s;
+}
+.portfolio__list:hover{
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .portfolio__list-cover{
