--- a/css/styles.css
+++ b/css/styles.css
@@ -168,7 +168,7 @@ border-bottom: 1px solid #E7E9FC;
 background-color:  #FFF;
 }
 .head{
-    box-shadow: зі значенням 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 .head__flex{
     
@@ -224,7 +224,7 @@ transition: all .4s;
 color: #2e2f42;
 padding: 24px 0;
 display: inline-block;
-transition-property:all .4s;
+transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 position: relative;
 }
 .head-nav__link::after{
@@ -270,7 +270,7 @@ letter-spacing: 0.32px;
 transition: all .4s;
 color: #434455;
 display: inline-block;
-transition-property:all .4s;
+transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .head-info__link:hover,
 .head-info__link:focus {
