--- a/css/styles.css
+++ b/css/styles.css
@@ -278,24 +278,16 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .advertisement{
+    max-width: 1440px;
     padding: 188px 0;
-    background-image: url(../images/herobg.jpg);
+    background:linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/herobg.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
     position: relative;
+    margin: 0 auto;
 }
-.advertisement:after{
-    content: '';
-    display: block;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(46, 47, 66, 0.7);
-    z-index: 0;
-}
+
 .advertisement__title{
     color: #fff;
     font-size: 56px;
@@ -306,8 +298,6 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-bottom: 48px;
     text-align: center;
     max-width: 496px;
-    z-index: 1;
-    position: relative;
 }
 .advertisement__btn{
     height: 56px;
@@ -320,11 +310,8 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500;
     line-height:  150%;
     letter-spacing: 0.64px;
-    transition: all .4s;
     border-radius: 4px;
-    z-index: 1;
-    position: relative;
-    transition-property:all .4s;
+    transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .advertisement__btn:hover,
 .advertisement__btn:focus{
