--- a/css/styles.css
+++ b/css/styles.css
@@ -372,7 +372,7 @@ color: #2e2f42;
     margin-right: 24px;
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px; 
-    /* box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);     */
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);    
     transition: all .4s;
 }
 .team__block:hover{
@@ -389,6 +389,31 @@ color: #2e2f42;
 .team__occupation{
     letter-spacing: 0.02em;
     text-align: center; 
+}
+.team__soc-list{
+    display: flex;
+    justify-content: center;
+    gap: 24px; 
+}
+.team__soc-item{
+    width: 40px;
+    height: 40px;
+}
+.team__soc-link{
+    width: 100%;
+    height: 100%;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team__soc-link:hover,
+.team__soc-link:focus{
+    background-color: #404bbf;
+}
+.team__soc-icon{
+    fill: #f4f4fd;
 }
 .portfolio{
 
