--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,8 @@
 svg {
-    display: inline-block;
-    stroke-width: 0;
-    stroke: red;
-    fill: red;
+    /* display: inline-block;
+    stroke-width: 0; */
+    /* stroke: red;
+    fill: red; */
   }
 
 body{
