--- a/css/styles.css
+++ b/css/styles.css
@@ -407,6 +407,7 @@ color: #2e2f42;
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .team__soc-link:hover,
 .team__soc-link:focus{
