--- a/css/styles.css
+++ b/css/styles.css
@@ -526,3 +526,10 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 margin-bottom: 16px;
 }
+.footer__soc-list{
+    gap: 16px;
+}
+.footer__soc-link:hover,
+.footer__soc-link:focus{
+    background-color: #31d0aa;
+}
