--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
 }
 
 address {
-    font-style: normal;
+   
 }
 
 /* Form */
@@ -238,6 +238,11 @@ margin-right: 40px;
 .head-info__li:last-child{
     margin-right: 0;
 }
+.head__info{
+    font-style: normal;
+    margin-left: auto;
+};
+
 .head-info__link{
 font-family: 'Roboto', sans-serif;
 font-size: 16px;
@@ -272,7 +277,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 700;
     line-height: 107.143%;
     letter-spacing: 1.12px;
-    margin-bottom: 48px;
+    margin: 0 auto 48px;
     text-align: center;
     max-width: 496px;
 }
@@ -289,6 +294,7 @@ transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.64px;
     border-radius: 4px;
     transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    margin: 0 auto;
 }
 .advertisement__btn:hover,
 .advertisement__btn:focus{
@@ -473,7 +479,7 @@ letter-spacing: 0.32px;
 }
 .footer__logo{
     display: inline-block;
-    margin-bottom: 16px;
+    margin: 0 0 16px;
 }
 .footer__info{
     max-width: 264px;
