--- a/css/styles.css
+++ b/css/styles.css
@@ -234,6 +234,7 @@ position: relative;
 
 .head-info__li{
 margin-right: 40px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 .head-info__li:last-child{
     margin-right: 0;
